--- a/frontend/src/Auth/Login/Login.css
+++ b/frontend/src/Auth/Login/Login.css
@@ -7,3 +7,23 @@
     margin-left: 20px;
     margin-top: 50px;
 }
+
+.inputBox{
+    margin: auto;
+    display: block;
+    margin: 25px;
+    padding: 7px;
+    width: 300px;
+    border: 2px solid blueviolet;
+  }
+
+  .fav{
+    margin: 25px;
+    padding: 10px;
+    width: 150px;
+    margin-right: 300px;
+    background-color: blueviolet;
+    color: white;
+    border: 2px solid;
+    cursor: pointer;
+  }
