--- a/frontend/src/Component/Showmobile/Showmobile.css
+++ b/frontend/src/Component/Showmobile/Showmobile.css
@@ -9,12 +9,13 @@
 .card {
     background-color: white;
     width: 400px;
-    height: 450px;
+    height: 600px;
     width: 400px;
     border-width: 1px;
     margin-left: 20px;
     margin-top: 20px;
-    border: 2px solid black;
+    border: 1px solid black !important;
+    padding: 10px;
     
 }
 
@@ -57,3 +58,49 @@
     border-radius: 12px;
     color: white;
 }
+
+.card-btn {
+    width: 320px;
+    height: 40px;
+    background-color: black;
+    color: whitesmoke;
+    border-radius: 10px;
+    font-size: 18px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: white;
+}
+
+.card-btn:hover {
+    background-color: red;
+    border-width: 2px;
+    border-style: solid;
+    border-color: black;
+    cursor: pointer;
+
+}
+
+.quantity{
+    text-align: left;
+    flex-direction:row ;
+}
+
+.rating{
+    color: rgb(241, 175, 7);
+    font-size:20px ;
+}
+
+.prize{
+    background-color: rgb(250, 250, 240);
+    width: 200px;
+    margin-left: 50px;
+    border-radius: 10px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(10, 10, 10);
+    font-size: 25px;
+    padding: 5px;
+    text-align: left ;
+   
+}
+
